styles/nav.css
nav {
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  flex: 2;
}

.headshot {
  height: 300px;
  border: 1px solid var();
  border-radius: 0.5rem;
}

.nav-menu {
  padding: 0.5rem;
  min-width: 80%;
  background-color: var(--tab-color);
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  display: flex;
  flex-direction: column;
  align-self: flex-start;
  gap: 0.1rem
}

.nav-item {
  padding: 0.3rem;
  border-radius: 0.2rem;
}

.nav-item > a {
  color: var(--text-color-2);
}

.nav-item:hover {
  background-color: var(--pop-color-2);
}

.nav-item:hover > a {
  color: var(--text-color-1);
}

.hamburger {
  display: none;
  cursor: pointer;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  transition: all 0.3s ease-in-out;
  background-color: var(--bar-color);
}

@media (max-width: 1366px) {
  nav {
    margin: 0.5rem 0;
    margin-left: 0.5rem;
  }
}

@media (max-width: 820px) {
  nav {
    min-height: 110px;
    margin-top: 0.5rem;
    margin-right: 0.5rem;
    padding: 1rem;
    margin-bottom: 0;
    border-radius: 0;
    border-bottom: 0;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    gap: 0.5rem;
    flex: 2;
  }

  .headshot {
    height: 75px;
  }

  .hamburger {
    display: block;
  }

  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .nav-menu {
    min-width: 100%;
    position: fixed;
    bottom: -100%;
    background-color: var(--tab-color);
    border-bottom-right-radius: 0;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
    align-self: center;
    gap: 1rem;
    z-index: 2;
    transition: 0.3s;
  }

  .nav-menu.active {
    bottom: 0;
  }
}

